contact page done

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -90,13 +90,69 @@
     </nav>
     <!-- Bottom Navbar -->
 
-    <!-- Content -->
-    <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
-    <!-- Content -->
 
+    <!-- contact form section -->
+    <section id="contact-form">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="contact-form__top">
+                        <h1 class="contact-form__top__h1">Contacts</h1>
+                         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item contact-form__top__li"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item contact-form__top__li" aria-current="page">Library</li>
+                            </ol>
+                            </nav>
+                    </div>
+                </div>
+            </div>
+
+            <!-- contact form -->
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-container">
+                    <h3 class="form__title">Fill up a Form</h3>
+                    
+                    <form>
+                    <div class="mb-4">
+                        <label for="name" class="form-label custom-label fw-semibold">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Your name here">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="email" class="form-label custom-label fw-semibold">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Your email here">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="message" class="form-label custom-label fw-semibold">Message</label>
+                        <textarea class="form-control" id="message" rows="3" placeholder="Your message here"></textarea>
+                    </div>
+
+                    <button type="submit" class="custom__form__btn">Post</button>
+                    </form>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- location section -->
+
+    <section id="location">
+        <div class="container">
+            <div class="location__area">
+                <img src="./images/Map - Copy.png" alt="area-map" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+
+
+    
+   
     <!-- Footer -->
     <footer class="py-5 footer">
         <div class="container">
