change css class

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarPillsExample">
                 <ul class="navbar-nav navbar-nav-pills nav-list">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Shop</a>
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link active" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Journal</a>
@@ -90,7 +90,6 @@
     </nav>
     <!-- Bottom Navbar -->
 
-
     <!-- contact form section -->
     <section id="contact-form">
         <div class="container">
@@ -98,12 +97,12 @@
                 <div class="col-md-6">
                     <div class="contact-form__top">
                         <h1 class="contact-form__top__h1">Contacts</h1>
-                         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item contact-form__top__li"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item contact-form__top__li" aria-current="page">Library</li>
                             </ol>
-                            </nav>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -113,27 +112,28 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-container">
-                    <h3 class="form__title">Fill up a Form</h3>
-                    
-                    <form>
-                    <div class="mb-4">
-                        <label for="name" class="form-label custom-label fw-semibold">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Your name here">
-                    </div>
+                        <h3 class="form__title">Fill up a Form</h3>
 
-                    <div class="mb-4">
-                        <label for="email" class="form-label custom-label fw-semibold">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Your email here">
-                    </div>
+                        <form>
+                            <div class="mb-4">
+                                <label for="name" class="form-label custom-label fw-semibold">Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="Your name here">
+                            </div>
 
-                    <div class="mb-4">
-                        <label for="message" class="form-label custom-label fw-semibold">Message</label>
-                        <textarea class="form-control" id="message" rows="3" placeholder="Your message here"></textarea>
-                    </div>
+                            <div class="mb-4">
+                                <label for="email" class="form-label custom-label fw-semibold">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Your email here">
+                            </div>
 
-                    <button type="submit" class="custom__form__btn">Post</button>
-                    </form>
-                </div>
+                            <div class="mb-4">
+                                <label for="message" class="form-label custom-label fw-semibold">Message</label>
+                                <textarea class="form-control" id="message" rows="3"
+                                    placeholder="Your message here"></textarea>
+                            </div>
+
+                            <button type="submit" class="custom__form__btn">Post</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -151,8 +151,8 @@
 
 
 
-    
-   
+
+
     <!-- Footer -->
     <footer class="py-5 footer">
         <div class="container">
