Sign-up page completed

--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -90,12 +90,179 @@
     </nav>
     <!-- Bottom Navbar -->
 
-    <!-- Content -->
-    <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
-    <!-- Content -->
+    <!-- Sign-up Page -->
+    <!-- Heading Section -->
+    <section class="heading-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="signup-heading">
+                        <h1 class="heading-1 signup-heading__title">Sign up</h1>
+                        <p class="signup-heading__sub-title">Home > Sign up</p>
+                        <p class="signup-heading__details">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem
+                            Ipsum has
+                            been the industry's standard dummy text ever since the.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="signup-heading-border"></div>
+        </div>
+    </section>
+    <!-- Personal Details Section -->
+    <section class="Details-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7">
+                    <div class="details-heading">
+                        <h1 class="heading-2 signup-heading__title">Your Personal Details</h1>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">First Name</h5>
+                            <p class="details__fisrt-name">First Name</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Last Name</h5>
+                            <p class="details__last-name">Last Name</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="signup-details-border"></div>
+                    </div>
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Email Address</h5>
+                            <p class="details__fisrt-name">company@domain.com</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Telephone</h5>
+                            <p class="details__last-name">Your phone number</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="signup-details-border w-100"></div>
+        </div>
+    </section>
+
+    <!-- Customer Section -->
+    <section class="returning-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7">
+                    <div class="signup-heading">
+                        <h1 class="heading-2 signup-heading__title signup-heading__title--modi">New Customer</h1>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Address 1</h5>
+                            <p class="details__first-name">4279 Zboncak Port Suite 6212</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Address 2</h5>
+                            <p class="details__last-name">----</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="signup-details-border"></div>
+                    </div>
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">City</h5>
+                            <p class="details__fisrt-name">Your City</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Post Code</h5>
+                            <p class="details__last-name">05228</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                    </div>
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Division</h5>
+                            <div class="customer-select">
+                                <p class="details__last-name">Please select </p>
+                                <p class="customer-dropdown"><i class="fa-solid fa-caret-down"></i></p>
+                            </div>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">District</h5>
+                            <div class="customer-select">
+                                <p class="details__last-name">Please select </p>
+                                <span class="customer-dropdown"><i class="fa-solid fa-caret-down"></i></span>
+                            </div>
+                            <div class="signup-details-border"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="signup-details-border w-100"></div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Pasword Section -->
+    <section class="returning-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7">
+                    <div class="signup-heading">
+                        <h1 class="heading-2 signup-heading__title signup-heading__title--modi">Your Password</h1>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="signup-heading details-heading">
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Password</h5>
+                            <p class="details__first-name">Password</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="details-name-wrapper">
+                            <h5 class="heading-6">Repeat Password</h5>
+                            <p class="details__last-name">Repeat Password</p>
+                            <div class="signup-details-border"></div>
+                        </div>
+                        <div class="signup-details-border"></div>
+                    </div>
+
+                </div>
+                <div class="signup-details-border w-100"></div>
+            </div>
+        </div>
+    </section>
+    <!-- Login Section -->
+    <section class="login-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7">
+                    <form>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">I have read and agree to the Privacy
+                                Policy</label>
+                        </div>
+                        <div class="mt-5">
+                            <label class="form-check-label pe-5" for="exampleCheck1">Subscribe Newsletter </label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label pe-5" for="exampleCheck1">Yes</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">No</label>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="login-btn"><a href="">Log in</a></div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 footer">
