--- a/404/index.html
+++ b/404/index.html
@@ -90,12 +90,25 @@
     </nav>
     <!-- Bottom Navbar -->
 
-    <!-- Content -->
-    <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
-    <!-- Content -->
+    <!-- 404 Page Content -->
+   <section id="errorpage">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="errorpage__content">
+                        <h1 class="errorpage__content__h1">404</h1>
+                        <p class="errorpage__content__p">The page you were looking for couldn't be found. The page could be removed or you misspelled the word while searching for it. Maybe try a search?</p>
+                        <form>
+                            <div class="errorpage__content__search">
+                                <input class="errorpage__content__input" type="search">
+                            </div>
+                        </form>
+                        <button class="errorpage__content__btn">Back To Home</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </section>
 
     <!-- Footer -->
     <footer class="py-5 footer">
