404 page completed  all design part

--- a/404/index.html
+++ b/404/index.html
@@ -94,13 +94,14 @@
    <section id="errorpage">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <div class="errorpage__content">
                         <h1 class="errorpage__content__h1">404</h1>
                         <p class="errorpage__content__p">The page you were looking for couldn't be found. The page could be removed or you misspelled the word while searching for it. Maybe try a search?</p>
                         <form>
-                            <div class="errorpage__content__search">
-                                <input class="errorpage__content__input" type="search">
+                            <div class="errorpage__content__search col-12">
+                                <input class="errorpage__content__input" type="type tosearch">
+                                <i class="fa-solid fa-magnifying-glass insidetoinput"></i>
                             </div>
                         </form>
                         <button class="errorpage__content__btn">Back To Home</button>
