--- a/about/index.html
+++ b/about/index.html
@@ -1,175 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../template.css">
-    <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/fastbootstrap@2.2.0/dist/css/fastbootstrap.min.css" rel="stylesheet"
-        integrity="sha256-V6lu+OdYNKTKTsVFBuQsyIlDiRWiOmtC8VQ8Lzdm2i4=" crossorigin="anonymous">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <title>OREBI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Orebi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #fff;
+    }
+    .navbar-brand {
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+    .about-header {
+      text-align: left;
+      padding: 80px 0 40px;
+    }
+    .about-header h1 {
+      font-size: 48px;
+      font-weight: 700;
+      color: #222;
+    }
+    .about-section img {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+    .about-section .btn-dark {
+      margin-top: 15px;
+      border-radius: 0;
+    }
+    .info-section {
+      text-align: center;
+      padding: 60px 0;
+    }
+    .info-section h5 {
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+    footer {
+      background-color: #f8f9fa;
+      padding: 40px 0;
+    }
+  </style>
 </head>
-
 <body>
 
-    <!-- Navbar  -->
-    <nav class="navbar navbar-expand-lg border-bottom-0 py-1">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPillsExample"
-                aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand logo" href="#">OREBI</a>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarPillsExample">
-                <ul class="navbar-nav navbar-nav-pills nav-list">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Shop</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Journal</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar  -->
-
-    <!-- Bottom Navbar -->
-    <nav class="navbar navbar-expand border-0  py-2 bottom-navbar">
-        <div class="container justify-content-between align-items-center">
-            <!-- Left: Shop by Category -->
-            <div class="d-flex align-items-center gap-2">
-                <i class="fa-solid fa-list-ul"></i>
-                <span class="fw-semibold small">Shop by Category</span>
-            </div>
-
-            <!-- Center: Search -->
-            <form class="d-flex search-box">
-                <input type="search" placeholder="Search Products" aria-label="Search" />
-                <button class="search-btn" type="submit">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
-            </form>
-
-            <!-- Right: Icons -->
-            <ul class="navbar-nav">
-                <!-- User Icon -->
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
-                </li>
-
-                <!-- Cart Icon with Badge -->
-                <li class="nav-item position-relative">
-                    <a class="nav-link text-dark position-relative" href="#">
-                        <span
-                            class="badge bg-danger rounded-pill position-absolute top-0 start-100 translate-middle">2</span>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- Bottom Navbar -->
-
-    <!-- Content -->
-    <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-light border-bottom">
+    <div class="container">
+      <a class="navbar-brand" href="#">OREBI</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+          <li class="nav-item"><a class="nav-link active fw-bold" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Journal</a></li>
+        </ul>
+      </div>
+      <form class="d-flex" role="search">
+        <input class="form-control form-control-sm me-2" type="search" placeholder="Search Products">
+        <button class="btn btn-outline-dark btn-sm" type="submit"><i class="bi bi-search"></i></button>
+      </form>
     </div>
-    <!-- Content -->
+  </nav>
 
-    <!-- Footer -->
-    <footer class="py-5 footer">
-        <div class="container">
-            <div class="row gy-4">
-                <!-- MENU -->
-                <div class="col-6 col-md-2">
-                    <h6 class="fw-bold mb-3">MENU</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Home</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Shop</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">About</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Contact</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block">Journal</a></li>
-                    </ul>
-                </div>
+  <!-- About Header -->
+  <div class="container about-header">
+    <h1>About</h1>
+    <small class="text-muted">Home / About</small>
+  </div>
 
-                <!-- SHOP -->
-                <div class="col-6 col-md-2">
-                    <h6 class="fw-bold mb-3">SHOP</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Headphone</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Clothing</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Accessories</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Shoes</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block">Bags</a></li>
-                    </ul>
-                </div>
-                <!-- TEAM -->
-                <div class="col-6 col-md-2">
-                    <h6 class="fw-bold mb-3">TEAM</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Joel</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Mofazzel</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Arindal</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block mb-2">Shihab</a></li>
-                        <li><a href="#" class="text-dark text-decoration-none d-block">Talha</a></li>
-                    </ul>
-                </div>
+  <!-- About Section -->
+  <div class="container about-section">
+    <div class="row text-center g-4">
+      <div class="col-md-6">
+        <img src="https://via.placeholder.com/400x400?text=Clock" alt="Brand">
+        <a href="#" class="btn btn-dark w-50 mt-3">Our Brands</a>
+      </div>
+      <div class="col-md-6">
+        <img src="22_9ad7cedf-f388-4f2c-9597-6c15309c6ef5_grande 3" alt="Store">
+        <a href="#" class="btn btn-dark w-50 mt-3">Our Stores</a>
+      </div>
+    </div>
+  </div>
 
+  <!-- Info Section -->
+  <div class="container info-section">
+    <p class="lead mt-5">
+      Orebi is one of the world’s leading eCommerce brands and is internationally recognized
+      for celebrating the essence of classic worldwide cool-looking style.
+    </p>
 
+    <div class="row mt-5">
+      <div class="col-md-4">
+        <h5>Our Vision</h5>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Our Story</h5>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Our Brands</h5>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+      </div>
+    </div>
+  </div>
 
-                <!-- CONTACT INFO -->
-                <div class="col-6 col-md-3">
-                    <p class="fw-semibold mb-1">(052) 611-5711</p>
-                    <p class="mb-1">company@domain.com</p>
-                    <p class="text-muted small">575 Crescent Ave, Quakertown, PA 18951</p>
-                    <div class="d-flex gap-3 mt-3">
-                        <a href="#" class="text-dark"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#" class="text-dark"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#" class="text-dark"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
-                </div>
-
-                <!-- LOGO -->
-                <div class="col-12 col-md-2 text-md-end text-center">
-                    <a class="navbar-brand logo" href="#">OREBI</a>
-                </div>
-            </div>
-
-            <hr class="my-4" />
-            <p class="text-center text-muted small mb-0">
-                2025 OREBI. All Rights Reserved. Developed by <a href="https://github.com/abdullahalmahmudtalha"
-                    class="text-decoration-none text-muted" style="color: brown !important;">-TEAM C-</a>
-            </p>
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0">&copy; 2025 OREBI | All Rights Reserved</p>
         </div>
-    </footer>
-    <!-- Footer -->
+      </div>
+    </div>
+  </footer>
 
-    <!-- Bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
+ 
