--- a/about/index.html
+++ b/about/index.html
@@ -126,6 +126,76 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Footer -->
+<footer class="bg-light text-dark pt-5 pb-3 mt-5 border-top">
+  <div class="container">
+    <div class="row gy-4">
+      
+      <!-- Menu -->
+      <div class="col-md-3">
+        <h6 class="fw-bold mb-3">MENU</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-decoration-none text-secondary">Home</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Shop</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">About</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Contact</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Journal</a></li>
+        </ul>
+      </div>
+
+      <!-- Shop -->
+      <div class="col-md-3">
+        <h6 class="fw-bold mb-3">SHOP</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-decoration-none text-secondary">Category 1</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Category 2</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Category 3</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Category 4</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Category 5</a></li>
+        </ul>
+      </div>
+
+      <!-- Help -->
+      <div class="col-md-3">
+        <h6 class="fw-bold mb-3">HELP</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-decoration-none text-secondary">Privacy Policy</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Terms & Conditions</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Special E-Shop</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Shipping</a></li>
+          <li><a href="#" class="text-decoration-none text-secondary">Secure Payments</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact -->
+      <div class="col-md-3">
+        <h6 class="fw-bold mb-3">CONTACT</h6>
+        <p class="mb-1 small text-secondary">(052) 611-5711</p>
+        <p class="mb-1 small text-secondary">company@domain.com</p>
+        <p class="small text-secondary">575 Crescent Ave. Quakertown, PA 18951</p>
+      </div>
+    </div>
+
+    <hr class="my-4">
+
+    <!-- Bottom Footer -->
+    <div class="row align-items-center">
+      <div class="col-md-6 d-flex align-items-center gap-3">
+        <a href="#" class="text-dark fs-5"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-dark fs-5"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="text-dark fs-5"><i class="bi bi-linkedin"></i></a>
+      </div>
+      <div class="col-md-6 text-md-end mt-3 mt-md-0">
+        <h5 class="fw-bold mb-0">OREBI</h5>
+        <p class="small text-secondary mb-0">© 2020 Orebi Minimal eCommerce Figma Template by Adveits</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Bootstrap Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
 </body>
 </html>
  
