Image part of product page is completed

--- a/product/index.html
+++ b/product/index.html
@@ -90,12 +90,46 @@
     </nav>
     <!-- Bottom Navbar -->
 
-    <!-- Content -->
-    <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
-    <!-- Content -->
+    <!-- Top Section Start -->
+    <section class="top-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="top-heading__sub-title">Home > Products</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Top Section End -->
+    <!-- Products Section Start -->
+    <section class="product-section">
+        <div class="container product-img-wrapper">
+            <div class="row">
+                <div class="col-lg-6 g-5">
+                    <picture class="product-pic">
+                        <img src="./images/product_1.png" alt="images/shop/shop_1.png" class="w-100 img-fluid">
+                    </picture>
+                </div>
+                <div class="col-lg-6 g-5">
+                    <picture class="product-pic">
+                        <img src="./images/product_2.png" alt="images/shop/shop_1.png" class="w-100 img-fluid">
+                    </picture>
+                </div>
+                <div class="col-lg-6 g-5">
+                    <picture class="product-pic">
+                        <img src="./images/product_3.png" alt="images/shop/shop_1.png" class="w-100 img-fluid">
+                    </picture>
+                </div>
+                <div class="col-lg-6 g-5">
+                    <picture class="product-pic">
+                        <img src="./images/product_4.png" alt="images/shop/shop_1.png" class="w-100 img-fluid">
+                    </picture>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Products Section End -->
+
 
     <!-- Footer -->
     <footer class="py-5 footer">
