--- a/about/index.html
+++ b/about/index.html
@@ -100,11 +100,11 @@
   <div class="container about-section">
     <div class="row text-center g-4">
       <div class="col-md-6">
-        <img src="https://via.placeholder.com/400x400?text=Clock" alt="Brand">
+        <img src="./23_8e8d59a6-adad-4e65-b528-8ff2517e47bb_grande 3.png" alt="Brand">
         <a href="#" class="btn btn-dark w-50 mt-3">Our Brands</a>
       </div>
       <div class="col-md-6">
-        <img src="22_9ad7cedf-f388-4f2c-9597-6c15309c6ef5_grande 3" alt="Store">
+        <img src="./boxwhite.png" alt="Store">
         <a href="#" class="btn btn-dark w-50 mt-3">Our Stores</a>
       </div>
     </div>
