code push from sazid vai

--- a/product/index.html
+++ b/product/index.html
@@ -150,6 +150,37 @@
     </div>
   </div>
 </section>
+
+<section>
+  <div class="container py-5">
+    <div class="card shadow-sm p-4 " style="max-width: 600px;">
+      <h3 class="mb-4 fw-semibold">Add a Review</h3>
+
+      <form>
+        <!-- Name -->
+        <div class="mb-3">
+          <label for="name" class="form-label fw-semibold">Name</label>
+          <input type="text" class="form-control" id="name" placeholder="Your name here">
+        </div>
+
+        <!-- Email -->
+        <div class="mb-3">
+          <label for="email" class="form-label fw-semibold">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Your email here">
+        </div>
+
+        <!-- Review -->
+        <div class="mb-3">
+          <label for="review" class="form-label fw-semibold">Review</label>
+          <textarea class="form-control" id="review" rows="4" placeholder="Your review here"></textarea>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-dark w-100">Submit Review</button>
+      </form>
+    </div>
+  </div>
+</section>
     <!-- Footer -->
     <footer class="py-5 footer">
         <div class="container">
