my-account added

--- a/cart/index.html
+++ b/cart/index.html
@@ -90,12 +90,94 @@
     </nav>
     <!-- Bottom Navbar -->
 
+
+
+
+
+
     <!-- Content -->
     <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
+    <section>
+        <div class="container">
+            <h2 class="my-account">Cart</h2>
+            <div class="accountnav">
+                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Cart</li>
+                    </ol>
+            </div>
+            <div class="Thead">
+                <ul class="thead-ul">
+                    <div class="thead-li">Product</div>
+                    <div class="thead-li">Price</div>
+                    <div class="thead-li">Quantity</div>
+                    <div class="thead-li">Total</div>
+                </ul>
+            </div>
+            <div class="tbode">
+                <div class="tbodeimg">
+                    <div class="tbode1">
+                        <div class="x">x</div>
+                        <img class="img" src="../cart/img/Image.png" alt="">
+                        <div class="produt">Product name</div>
+                    </div>
+                    <div class="price">$44.00</div>
+                    <div class="quality">- 1 +</div>
+                    <div class="total">$44.00</div>
+                </div>
+
+            </div>
+            <div class="wraper">
+                <div class="dropdown ">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                        aria-expanded="false" style="width: 120px;border: 1px solid antiquewhite;">
+                        SIZE
+                    </button>
+
+
+                </div>
+                <div class="" style="align-content: center;margin-left: 23px;">Apply coupon</div>
+                <div style="align-content: center; margin-left: 727px;">Update cart</div>
+            </div>
+
+            <div class=" lest">
+                <div class="">
+                    <div class="last p" style="margin-left: 992px; margin-bottom: 24px; margin-top: 54px; color: #262626;">Cart totals</div>
+                    <div class="" style="display: flex;">
+                        <div class="" style="border: 1px solid aliceblue;width: 250px;
+                        margin-left: 614px; height: 50px;">Subtotal</div>
+                        <div class="" style="border: 1px solid aliceblue;width: 250px;">389.99 $</div>
+                    </div>
+
+
+                    <div class="" style="display: flex;">
+                        <div class="" style="border: 1px solid aliceblue;width: 250px;
+                        margin-left: 614px; height: 50px;">Total</div>
+                        <div class="" style="border: 1px solid aliceblue;width: 250px;">389.99 $</div>
+                    </div>
+                    <button type="button" class="btn btn-dark" style="margin-left: 900px; margin-top: 30px; margin-bottom: 140px;">Proceed to Checkout</button>
+                </div>
+            </div>
+        </div>
+
+        </div>
+
+    </section>
+
+
+
+
+
+
+
     <!-- Content -->
+
+
+
+
+
+
 
     <!-- Footer -->
     <footer class="py-5 footer">
