--- a/my-account/index.html
+++ b/my-account/index.html
@@ -90,11 +90,46 @@
     </nav>
     <!-- Bottom Navbar -->
 
+
+
+
+
     <!-- Content -->
     <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
+    <section>
+        <div class="container">
+            <h2 class="my-account">My Account</h2>
+            <div class="accountnav">
+                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">My account</li>
+                    </ol>
+            </div>
+            <div class="accound-details">
+                <ul class="accound-list">
+                    <li class="list">Dashboard</li>
+                    <li class="list1">Others</li>
+                    <li class="list1">Donwloads</li>
+                    <li class="list1">Addresses</li>
+                    <li class="list1">Account details</li>
+                    <li class="list1">Logout</li>
+                </ul>
+                <span class="accound-para">
+                    <p>Hello admin (not admin? Log out)
+                    </p>
+                    <p class="paragraph"> From your account dashboard you can view your recent orders, manage your shipping and billing
+                        addresses, and edit your password and account details.</p>
+                </span>
+            </div>
+            </nav>
+        </div>
+    </section>
+
+
+
+
+
     <!-- Content -->
 
     <!-- Footer -->
