--- a/home/index.html
+++ b/home/index.html
@@ -92,9 +92,7 @@
 
     <!-- Content -->
     <!-- Replace with your content -->
-    <div class="container d-flex justify-content-center align-items-center" style="height: 50vh;">
-        <h1 class="heading-2">(WRITE YOUR CONTENT HERE)</h1>
-    </div>
+    <h1>hellow</h1>
     <!-- Content -->
 
     <!-- Footer -->
